# komikku-macos

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Komikku.doap  Makefile  README.md  REUSE.toml  meson.build  meson_options.txt  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt  setup.cfg
.forgejo/workflows/: reuse.yaml
.gitea/issue_template/: bug.yaml
.github/workflows/: main.yml
data/: info.febvre.Komikku.appdata.xml.in.in  info.febvre.Komikku.desktop.in  info.febvre.Komikku.gresource.xml.in  info.febvre.Komikku.gschema.xml.in  info.febvre.Komikku.metainfo.xml.in.in  meson.build
data/css/: style.css
data/icons/: meson.build
data/ui/: about_window.ui.in  application_window.blp  card.blp  card_chapters_list_row.blp  card_tracking.blp  card_tracking_search.blp  categories_editor.blp  download_manager.blp  explorer_search.blp  explorer_servers.blp  history.blp  library.blp  meson.build  preferences.blp  preferences_server_params.blp  preferences_servers_languages.blp  preferences_servers_settings.blp  reader.blp  shortcuts.blp  shortcuts_overview.blp  support.blp  webview.blp
data/ui/menu/: card.xml  card_selection_mode.xml  download_manager.xml  explorer_search_global_search.xml  library_search.xml  library_selection_mode.xml  main.xml  reader.xml
flatpak/: flatpak-cargo-generator.py  flatpak-pip-generator  info.febvre.KomikkuDevel.json  python3-brotli.json  python3-curl_cffi.json  python3-modern-colorthief.json  python3-pypdf.json
komikku/: activity_indicator.py  application.py  categories_editor.py  consts.py  debug_info.py  downloader.py  history.py  preferences.py  support.py  updater.py  utils.py  webview.py
komikku/card/: __init__.py  categories_list.py  chapters_list.py  tracking.py
komikku/explorer/: __init__.py  common.py  servers.py
komikku/explorer/search/: __init__.py  latest_updates.py  most_popular.py  search.py  search_global.py
komikku/models/: __init__.py  database.py  keyring.py  settings.py
komikku/models/database/: __init__.py  categories.py  downloads.py  mangas.py
komikku/preferences/: __init__.py  servers.py  trackers.py
komikku/reader/: __init__.py  controls.py
komikku/reader/pager/: __init__.py  image.py  infinite_canvas.py  page.py  webtoon.py
komikku/servers/: __init__.py  exceptions.py  index.json  loader.py  utils.py
komikku/servers/akumanga/: __init__.py
komikku/servers/aloalivn/: __init__.py
komikku/servers/animesama/: __init__.py
komikku/servers/annyo/: __init__.py
komikku/servers/anteikuscan/: __init__.py
komikku/servers/apollcomics/: __init__.py
komikku/servers/aralosbd/: __init__.py
komikku/servers/araznovel/: __init__.py
komikku/servers/argosscan/: __init__.py
komikku/servers/asurascans/: __init__.py
komikku/servers/asurascansfree/: __init__.py
komikku/servers/atikrost/: __init__.py
komikku/servers/aurorascan/: __init__.py
komikku/servers/aurorascans/: __init__.py
komikku/servers/bentoscan/: __init__.py
komikku/servers/bestmanga/: __init__.py
komikku/servers/bilibili/: __init__.py
komikku/servers/bluesolo/: __init__.py
komikku/servers/carteldemanhwas/: __init__.py
komikku/servers/catmanga/: __init__.py
komikku/servers/centraldemangas/: __init__.py
komikku/servers/cerisescan/: __init__.py
komikku/servers/coloredcouncil/: __init__.py
komikku/servers/comicbookplus/: __init__.py
komikku/servers/comicextra/: __init__.py
komikku/servers/comicfans/: __init__.py
komikku/servers/comichubfree/: __init__.py
komikku/servers/comick/: __init__.py
komikku/trackers/: __init__.py  utils.py
po/: LINGUAS  POTFILES.in  ar.po  as.po  bg.po  ca.po  cs.po  de.po  eo.po  es.po  fa.po  fi.po  fr.po  hi.po  hr.po  hu.po  id.po  it.po  km.po  ko.po  komikku.pot  lt.po  meson.build  ml.po  ms.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sv.po  ta.po  tr.po  uk.po  update_potfiles.sh  vi.po  zh_CN.po  zh_Hant.po
scripts/: archive_servers_modules.py  extract_translators.py  generate_servers_index.py  remove_webview.py
subprojects/: blueprint-compiler.wrap
tests/: README.md
tests/servers/: __init__.py  test_animesama.py  test_annyo.py  test_anteikuscan.py  test_apollcomics.py  test_aralosbd.py  test_argosscan.py  test_asurascans.py  test_asurascansfree.py  test_atikrost.py  test_aurorascans.py  test_bentoscan.py  test_bestmanga.py  test_bluesolo.py  test_carteldemanhwas.py  test_coloredcouncil.py  test_comicbookplus.py  test_comicextra.py  test_comicfans.py  test_comichubfree.py  test_comick.py  test_comix.py  test_dangoscan.py  test_dankefurslesen.py  test_dbmultiverse.py  test_dbnewhope.py  test_desu.py  test_doctruyen3q.py  test_dynasty.py  test_edscanlation.py  test_existentialcomics.py  test_ezmanga.py  test_flamescans.py  test_fleksyscans.py  test_fmteam.py  test_fosscomics.py  test_frdashscan.py  test_grisebouille.py  test_gtotgs.py  test_guya.py  (+110 more)
(+199 files in other folders)
